throwaway: using taproot by default
