# looprpc/client.swagger.json
@@ -1044,6 +1044,9 @@
           "type": "string",
           "description": "The native segwit address of the on-chain htlc.\nUsed for both loop-in and loop-out."
         },
+        "htlc_address_p2tr": {
+          "type": "string"
+        },
         "server_message": {
           "type": "string",
           "description": "A human-readable message received from the loop server."
@@ -1105,6 +1108,9 @@
         "htlc_address": {
           "type": "string",
           "description": "DEPRECATED:  This field stores the address of the onchain htlc.\n- For internal loop-in htlc_address contains the address of the\nnative segwit (P2WSH) htlc.\n- For external loop-in htlc_address contains the nested segwit (NP2WSH)\naddress.\n- For loop-out htlc_address always contains the native segwit (P2WSH)\nhtlc address."
+        },
+        "htlc_address_p2tr": {
+          "type": "string"
         },
         "htlc_address_p2wsh": {
           "type": "string",
